--- a/projeto-sabespe/src/app/pages/processo-cmc/processo-cmc.component.html
+++ b/projeto-sabespe/src/app/pages/processo-cmc/processo-cmc.component.html
@@ -4,64 +4,25 @@
     <div class="s-o-paulo">Cumprimento das Metas Contratuais</div>
   </div>
   <img class="ativo" src="assets/grafismo-2.png" />
-  <div class="line line-4" style="display: block;">
-    <ngx-charts-bar-vertical
-      [view]="[300,500]"
-      [results]="marco"
+  <div class="line line-1" style="display: block;">
+    <ngx-charts-bar-vertical-2d
+      [view]="[1800,500]"
+      [results]="data"
       [showDataLabel]="true"
       [xAxis]="true"
       [customColors]="customColors"
       [showGridLines]="false"
       [roundEdges]="false"
-      [xAxisLabel]="'Março'"
-      [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
-    </ngx-charts-bar-vertical>
-  </div>    
-  <div class="line line-5" style="display: block;">
-    <ngx-charts-bar-vertical
-      [view]="[300,500]"
-      [results]="junho"
-      [showDataLabel]="true"
-      [xAxis]="true"
-      [customColors]="customColors"
-      [showGridLines]="false"
-      [roundEdges]="false"
-      [xAxisLabel]="'Junho'"
-      [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
-    </ngx-charts-bar-vertical>
-  </div>   
-  <div class="line line-6" style="display: block;">
-    <ngx-charts-bar-vertical
-      [view]="[300,500]"
-      [results]="setembro"
-      [showDataLabel]="true"
-      [xAxis]="true"
-      [customColors]="customColors"
-      [showGridLines]="false"
-      [roundEdges]="false"
-      [xAxisLabel]="'Setembro'"
-      [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
-    </ngx-charts-bar-vertical>
-  </div>  
-  <div class="line line-7" style="display: block;">
-    <ngx-charts-bar-vertical
-      [view]="[300,500]"
-      [results]="dezembro"
-      [showDataLabel]="true"
-      [xAxis]="true"
-      [customColors]="customColors"
-      [showGridLines]="false"
-      [roundEdges]="false"
-      [xAxisLabel]="'Dezembro'"
-      [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
-    </ngx-charts-bar-vertical>
-  </div>  
+      [dataLabelFormatting]="formatDataLabel"
+      [legend]="true"
+      [noBarWhenZero]="false"
+      [legendTitle]="''"
+      [legendPosition]="legendPosition">
+    </ngx-charts-bar-vertical-2d>
+  </div>
   <img class="img" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/processo-ase']" />
   <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
+  <img class="group-4" src="assets/gif/ICONES_X.gif" [routerLink]="['/tela-botoes']" />
   <img class="frame" src="assets/linha-colorida.png" />
   <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
   <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/processo-asa']" />
