--- a/projeto-sabespe/src/app/pages/processo-tci/processo-tci.component.html
+++ b/projeto-sabespe/src/app/pages/processo-tci/processo-tci.component.html
@@ -5,175 +5,24 @@
   </div>
   <img class="ativo" src="assets/grafismo-2.png" />
   <div class="line line-1" style="display: block;">
-    <ngx-charts-bar-vertical
-      [view]="[170,500]"
-      [results]="janeiro"
+    <ngx-charts-bar-vertical-2d
+      [view]="[1800,500]"
+      [results]="data"
       [showDataLabel]="true"
       [xAxis]="true"
       [customColors]="customColors"
       [showGridLines]="false"
       [roundEdges]="false"
-      [xAxisLabel]="'Janeiro'"
-      [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
-    </ngx-charts-bar-vertical>
-  </div>  
-  <div class="line line-2" style="display: block;">
-    <ngx-charts-bar-vertical
-      [view]="[170,500]"
-      [results]="fevereiro"
-      [showDataLabel]="true"
-      [xAxis]="true"
-      [customColors]="customColors"
-      [showGridLines]="false"
-      [roundEdges]="false"
-      [xAxisLabel]="'Fevereiro'"
-      [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
-    </ngx-charts-bar-vertical>
-  </div>  
-  <div class="line line-3" style="display: block;">
-    <ngx-charts-bar-vertical
-      [view]="[170,500]"
-      [results]="marco"
-      [showDataLabel]="true"
-      [xAxis]="true"
-      [customColors]="customColors"
-      [showGridLines]="false"
-      [roundEdges]="false"
-      [xAxisLabel]="'Março'"
-      [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
-    </ngx-charts-bar-vertical>
-  </div>  
-  <div class="line line-4" style="display: block;">
-    <ngx-charts-bar-vertical
-      [view]="[170,500]"
-      [results]="abril"
-      [showDataLabel]="true"
-      [xAxis]="true"
-      [customColors]="customColors"
-      [showGridLines]="false"
-      [roundEdges]="false"
-      [xAxisLabel]="'Abril'"
-      [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
-    </ngx-charts-bar-vertical>
-  </div>  
-  <div class="line line-5" style="display: block;">
-    <ngx-charts-bar-vertical
-      [view]="[170,500]"
-      [results]="maio"
-      [showDataLabel]="true"
-      [xAxis]="true"
-      [customColors]="customColors"
-      [showGridLines]="false"
-      [roundEdges]="false"
-      [xAxisLabel]="'Maio'"
-      [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
-    </ngx-charts-bar-vertical>
-  </div>  
-  <div class="line line-6" style="display: block;">
-    <ngx-charts-bar-vertical
-      [view]="[170,500]"
-      [results]="junho"
-      [showDataLabel]="true"
-      [xAxis]="true"
-      [customColors]="customColors"
-      [showGridLines]="false"
-      [roundEdges]="false"
-      [xAxisLabel]="'Junho'"
-      [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
-    </ngx-charts-bar-vertical>
-  </div>  
-  <div class="line line-7" style="display: block;">
-    <ngx-charts-bar-vertical
-      [view]="[170,500]"
-      [results]="julho"
-      [showDataLabel]="true"
-      [xAxis]="true"
-      [customColors]="customColors"
-      [showGridLines]="false"
-      [roundEdges]="false"
-      [xAxisLabel]="'Julho'"
-      [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
-    </ngx-charts-bar-vertical>
-  </div>  
-  <div class="line line-8" style="display: block;">
-    <ngx-charts-bar-vertical
-      [view]="[170,500]"
-      [results]="agosto"
-      [showDataLabel]="true"
-      [xAxis]="true"
-      [customColors]="customColors"
-      [showGridLines]="false"
-      [roundEdges]="false"
-      [xAxisLabel]="'Agosto'"
-      [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
-    </ngx-charts-bar-vertical>
-  </div>  
-  <div class="line line-9" style="display: block;">
-    <ngx-charts-bar-vertical
-      [view]="[170,500]"
-      [results]="setembro"
-      [showDataLabel]="true"
-      [xAxis]="true"
-      [customColors]="customColors"
-      [showGridLines]="false"
-      [roundEdges]="false"
-      [xAxisLabel]="'Setembro'"
-      [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
-    </ngx-charts-bar-vertical>
-  </div>  
-  <div class="line line-10" style="display: block;">
-    <ngx-charts-bar-vertical
-      [view]="[170,500]"
-      [results]="outubro"
-      [showDataLabel]="true"
-      [xAxis]="true"
-      [customColors]="customColors"
-      [showGridLines]="false"
-      [roundEdges]="false"
-      [xAxisLabel]="'Outubro'"
-      [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
-    </ngx-charts-bar-vertical>
-  </div>  
-  <div class="line line-11" style="display: block;">
-    <ngx-charts-bar-vertical
-      [view]="[170,500]"
-      [results]="novembro"
-      [showDataLabel]="true"
-      [xAxis]="true"
-      [customColors]="customColors"
-      [showGridLines]="false"
-      [roundEdges]="false"
-      [xAxisLabel]="'Novembro'"
-      [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
-    </ngx-charts-bar-vertical>
-  </div>  
-  <div class="line line-12" style="display: block;">
-    <ngx-charts-bar-vertical
-      [view]="[170,500]"
-      [results]="dezembro"
-      [showDataLabel]="true"
-      [xAxis]="true"
-      [customColors]="customColors"
-      [showGridLines]="false"
-      [roundEdges]="false"
-      [xAxisLabel]="'Dezembro'"
-      [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
-    </ngx-charts-bar-vertical>
-  </div>  
+      [dataLabelFormatting]="formatDataLabel"
+      [legend]="true"
+      [noBarWhenZero]="false"
+      [legendTitle]="''"
+      [legendPosition]="legendPosition">
+    </ngx-charts-bar-vertical-2d>
+  </div>    
   <img class="img" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/processo-touv']" />
   <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
+  <img class="group-4" src="assets/gif/ICONES_X.gif" [routerLink]="['/tela-botoes']" />
   <img class="frame" src="assets/linha-colorida.png" />
   <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
   <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/processo-nps']" />
