finalizando os perfis

--- a/projeto-sabespe/src/app/pages/indicadores-contraturais/indicadores-contraturais.component.html
+++ b/projeto-sabespe/src/app/pages/indicadores-contraturais/indicadores-contraturais.component.html
@@ -7,9 +7,9 @@
     <img class="img" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/capa-sp']" />
     <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
     <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
-    <img class="frame" src="assets/botao-sp.png" [routerLink]="['/metas-sp']" />
-    <img class="frame-2" src="assets/botao-sa.png" [routerLink]="['/metas-sa']" />
-    <img class="frame-3" src="assets/botao-m.png" [routerLink]="['/metas-maua']" />
+    <img class="frame" src="assets/botao-sp.png" [routerLink]="['/capa-sp']" />
+    <img class="frame-2" src="assets/botao-sa.png" [routerLink]="['/capa-sa']" />
+    <img class="frame-3" src="assets/botao-m.png" [routerLink]="['/capa-maua']" />
 </div>
 
     
