--- a/projeto-sabespe/src/app/pages/inicio/inicio.component.html
+++ b/projeto-sabespe/src/app/pages/inicio/inicio.component.html
@@ -5,6 +5,7 @@
     <div class="superintendencia">SUPERINTENDÊNCIA CENTRO</div>
     <img class="group" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
     <img class="vector" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/super-centro']" />
+    <img class="frame-4" src="assets/linha-colorida.png" />
 </div>
     
 
