--- a/projeto-sabespe/src/app/pages/mapa/mapa.component.html
+++ b/projeto-sabespe/src/app/pages/mapa/mapa.component.html
@@ -17,4 +17,5 @@
   <img class="frame-4" src="assets/linha-colorida.png" />
   <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
   <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/perfil-polo-jardins']" />
+  <img class="grafismo" src="assets/ativo-2.png" />
 </div>
