--- a/projeto-sabespe/src/app/pages/perfil-polo-mateus/perfil-polo-mateus.component.html
+++ b/projeto-sabespe/src/app/pages/perfil-polo-mateus/perfil-polo-mateus.component.html
@@ -39,4 +39,5 @@
   <img class="botao absoluto group-3" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
   <img class="botao absoluto vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/perfil-polo-tamanduatei']" />
   <img class="botao absoluto group-4" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
+  <img class="frame-4" src="assets/linha-colorida.png" />
 </div>
