--- a/projeto-sabespe/src/app/pages/inicio/inicio.component.css
+++ b/projeto-sabespe/src/app/pages/inicio/inicio.component.css
@@ -6,25 +6,25 @@
   }
   
   .ativo {
-    width: 550px;
-    height: 450px;
-    top: 485px;
-    left: 1300px;
+    width: 500px;
+    height: 500px;
+    top: 500px;
+    left: 1400px;
     position: absolute;
     object-fit: cover;
   }
   
   .mask-group {
     position: absolute;
-    width: 469px;
-    height: 712px;
+    width: 600px;
+    height: 800px;
     top: 100px;
     left: 1250px;
   }
   
   .img {
-    width: 960px;
-    height: 572px;
+    width: 900px;
+    height: 500px;
     top: 0;
     left: 0;
     position: absolute;
@@ -33,14 +33,14 @@
   
   .superintendencia {
     position: absolute;
-    width: 938px;
+    width: 1100px;
     top: 451px;
     left: 140px;
     mix-blend-mode: multiply;
     font-family: "Satoshi-Black", Helvetica;
     font-weight: 900;
     color: rgba(18, 208, 255, 1);
-    font-size: 80px;
+    font-size: 90px;
     letter-spacing: 0;
     line-height: normal;
   }
@@ -50,6 +50,7 @@
     position: absolute;
     height: 150px;
     top: 920px;
+    left: 750px;
     cursor: pointer;
   }
   
@@ -58,7 +59,15 @@
     width: 150px;
     height: 150px;
     top: 920px;
-    left: 1750px;
+    left: 900px;
     cursor: pointer;
+  }
+
+  .frame-4 {
+    position: absolute;
+    width: 1920px;
+    height: 18px;
+    top: 1062px;
+    left: 0;
   }
   
