--- a/projeto-sabespe/src/app/pages/menu/menu.component.css
+++ b/projeto-sabespe/src/app/pages/menu/menu.component.css
@@ -15,7 +15,7 @@
 
 .image {
   position: absolute;
-  height: 894px;
+  height: 1000px;
   top: 0;
   left: -300px;
   mix-blend-mode: multiply;
@@ -34,13 +34,13 @@
   position: absolute;
   width: 520px;
   height: 52px;
-  top: 618px;
+  top: 580px;
   left: 614px;
 }
 
 .frame {
   width: 454px;
-  top: 634px;
+  top: 590px;
   left: 1129px;
   display: flex;
   height: 70px;
@@ -50,7 +50,7 @@
   padding: 10px 33px;
   position: absolute;
   background-color: rgba(18, 208, 255, 1);
-  border-radius: 30px;
+  border-radius: 50px;
   cursor: pointer;
 }
 
@@ -60,7 +60,7 @@
   font-family: "Inter-Bold", Helvetica;
   font-weight: 700;
   color: #ffffff;
-  font-size: 24px;
+  font-size: 36px;
   letter-spacing: 0;
   line-height: normal;
 }
@@ -77,7 +77,7 @@
   padding: 10px 33px;
   position: absolute;
   background-color: rgba(18, 208, 255, 1);
-  border-radius: 30px;
+  border-radius: 50px;
   cursor: pointer;
 }
 
@@ -85,7 +85,7 @@
   position: absolute;
   width: 520px;
   height: 52px;
-  top: 489px;
+  top: 450px;
   left: 614px;
 }
 
@@ -93,7 +93,7 @@
   position: absolute;
   width: 647px;
   height: 163px;
-  top: 317px;
+  top: 220px;
   left: 631px;
 }
 
@@ -117,13 +117,13 @@
   padding: 10px 33px;
   position: absolute;
   background-color: rgba(18, 208, 255, 1);
-  border-radius: 30px;
+  border-radius: 50px;
   cursor: pointer;
 }
 
 .frame-2 {
   width: 269px;
-  top: 458px;
+  top: 410px;
   left: 1135px;
   display: flex;
   height: 70px;
@@ -133,7 +133,7 @@
   padding: 10px 33px;
   position: absolute;
   background-color: rgba(18, 208, 255, 1);
-  border-radius: 30px;
+  border-radius: 50px;
   cursor: pointer;
 }
 
@@ -142,7 +142,7 @@
   width: 150px;
   height: 150px;
   top: 920px;
-  left: 1750px;
+  left: 1200px;
   cursor: pointer;
 }
 
@@ -150,7 +150,7 @@
   width: 150px;
   height: 150px;
   position: absolute;
-  left: 116px;
+  left: 750px;
   top: 920px;
   cursor: pointer;
 }
@@ -160,7 +160,7 @@
   width: 150px;
   height: 150px;
   top: 920px;
-  left: 1600px;
+  left: 1050px;
   cursor: pointer;
 }
 
@@ -169,5 +169,22 @@
   height: 150px;
   position: absolute;
   top: 920px;
+  left: 600px;
   cursor: pointer;
+}
+
+.grafismo {
+  position: absolute;
+  width: 700px;
+  height: 400px;
+  top: 0px;
+  left: 1220px;
+}
+
+.frame-4 {
+  position: absolute;
+  width: 1920px;
+  height: 18px;
+  top: 1062px;
+  left: 0;
 }
