--- a/projeto-sabespe/src/app/pages/menu/menu.component.html
+++ b/projeto-sabespe/src/app/pages/menu/menu.component.html
@@ -18,5 +18,7 @@
   <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
   <img class="vector-5" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/super-centro']" />
   <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
+  <img class="grafismo" src="assets/ativo-4.png" />
+  <img class="frame-4" src="assets/linha-colorida.png" />
 </div>
 
