--- a/projeto-sabespe/src/app/pages/super-centro/super-centro.component.html
+++ b/projeto-sabespe/src/app/pages/super-centro/super-centro.component.html
@@ -26,5 +26,6 @@
   <img class="frame" src="assets/linha-colorida.png" />
   <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
   <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/menu']" />
+  <img class="grafismo" src="assets/ativo-2.png" />
 </div>
 
