--- a/projeto-sabespe/src/app/pages/voce-sabia-allianz/voce-sabia-allianz.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-allianz/voce-sabia-allianz.component.html
@@ -3,12 +3,12 @@
     <div class="overlap-group">
       <div class="voc">VOCÊ</div>
       <div class="sabia">SABIA?</div>
+      <div class="polo">Jardins</div>
       <div class="paragrafo-com-scroll">
         <p class="a-atual-identidade">
           Casa do Palmeiras, e palco dos maiores shows e eventos que acontecem na cidade de São Paulo, 
                 o Allianz Parque é um gigante que abriga a história e a  tradição do Clube, e faz um elo com a comunidade 
                 local por meio das atrações que oferece, e da sua privilegiada localização.&nbsp;&nbsp;<br /><br />
-                Vamos dar um pulo na 25?”. 
                 O que foi construído no lugar do antigo Estádio Palestra Itália vai além de ser a casa da Sociedade Esportiva Palmeiras.
                 É palco de grandes eventos, shows e espetáculos, um ponto de encontro para a comunidade, um centro pulsante de cultura
                 e entretenimento.&nbsp;&nbsp;<br /><br />
