--- a/projeto-sabespe/src/app/pages/voce-sabia-catedral/voce-sabia-catedral.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-catedral/voce-sabia-catedral.component.html
@@ -3,6 +3,7 @@
     <div class="overlap-group">
       <div class="voc">VOCÊ</div>
       <div class="sabia">SABIA?</div>
+      <div class="polo">Ipiranga</div>
       <div class="paragrafo-com-scroll">
         <p class="a-atual-identidade">
           Mais do que um cartão postal da cidade de São Paulo, a Catedral da Sé, localizada em frente ao marco zero da cidade, 
