--- a/projeto-sabespe/src/app/pages/voce-sabia-grafite/voce-sabia-grafite.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-grafite/voce-sabia-grafite.component.html
@@ -3,6 +3,7 @@
     <div class="overlap-group">
       <div class="voc">VOCÊ</div>
       <div class="sabia">SABIA?</div>
+      <div class="polo">São Mateus</div>
       <div class="paragrafo-com-scroll">
         <p class="a-atual-identidade">
           O Movimento Grafite e Hip Hop traz as cores e as vozes que ecoam pelas ruas e vielas de São Mateus contam histórias de luta 
