--- a/projeto-sabespe/src/app/pages/voce-sabia-industrial/voce-sabia-industrial.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-industrial/voce-sabia-industrial.component.html
@@ -3,6 +3,7 @@
     <div class="overlap-group">
       <div class="voc">VOCÊ</div>
       <div class="sabia">SABIA?</div>
+      <div class="polo">Tamanduateí</div>
       <div class="paragrafo-com-scroll">
         <p class="a-atual-identidade">
           Duas forças imponentes dividem o cenário na baixada santista: a vasta natureza e o Polo Industrial Petroquímico. 
