--- a/projeto-sabespe/src/app/pages/voce-sabia-mercadao/voce-sabia-mercadao.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-mercadao/voce-sabia-mercadao.component.html
@@ -3,6 +3,7 @@
     <div class="overlap-group">
       <div class="voc">VOCÊ</div>
       <div class="sabia">SABIA?</div>
+      <div class="polo">Ipiranga</div>
       <div class="paragrafo-com-scroll">
         <p class="a-atual-identidade">
           O Mercadão, como é conhecido, é local de encontro de todos os povos e diferentes culinárias que moldam a gastronomia 
