--- a/projeto-sabespe/src/app/pages/voce-sabia-mooca/voce-sabia-mooca.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-mooca/voce-sabia-mooca.component.html
@@ -3,6 +3,7 @@
     <div class="overlap-group">
       <div class="voc">VOCÊ</div>
       <div class="sabia">SABIA?</div>
+      <div class="polo">Mooca</div>
       <div class="paragrafo-com-scroll">
         <p class="a-atual-identidade">
           O Juventus da Mooca é sinônimo de tradição e paixão para a sua torcida, e é um importante pólo esportivo e social da região. 
