--- a/projeto-sabespe/src/app/pages/voce-sabia-parquinho/voce-sabia-parquinho.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-parquinho/voce-sabia-parquinho.component.html
@@ -3,11 +3,11 @@
     <div class="overlap-group">
       <div class="voc">VOCÊ</div>
       <div class="sabia">SABIA?</div>
+      <div class="polo">São Mateus</div>
       <div class="paragrafo-com-scroll">
         <p class="a-atual-identidade">
           A imensa e urbana São Mateus encontra refúgio para recarregar as energias no Parque Nebulosas que abriga árvores centenárias, 
                 e oferece lindas paisagens como cenário para encontros de lazer, prática de esportes e manifestações artísticas.&nbsp;&nbsp;<br /><br />
-                Vamos dar um pulo na 25?”. 
                 Em meio à vastidão urbana de São Mateus, surge um oásis verde, o Parque Nebulosas. 
                 Um refúgio para os amantes da natureza, um palco para a cultura e o lazer, um espaço de paz e contemplação para toda a família.&nbsp;&nbsp;<br /><br />
                 Árvores centenárias, como jatobás e figueiras, oferecem sombra e proteção. O lago, um espelho d'água que reflete o céu, 
