--- a/projeto-sabespe/src/app/pages/voce-sabia-paulista/voce-sabia-paulista.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-paulista/voce-sabia-paulista.component.html
@@ -3,6 +3,7 @@
     <div class="overlap-group">
       <div class="voc">VOCÊ</div>
       <div class="sabia">SABIA?</div>
+      <div class="polo">Jardins</div>
       <div class="paragrafo-com-scroll">
         <p class="a-atual-identidade">
           A Avenida Paulista é a artéria pulsante da megalópole, e sua 
