--- a/projeto-sabespe/src/app/pages/voce-sabia-vila/voce-sabia-vila.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-vila/voce-sabia-vila.component.html
@@ -3,6 +3,7 @@
     <div class="overlap-group">
       <div class="voc">VOCÊ</div>
       <div class="sabia">SABIA?</div>
+      <div class="polo">Tamanduateí</div>
       <div class="paragrafo-com-scroll">
         <p class="a-atual-identidade">
           Uma viagem através dos trilhos ferroviários e a sensação nostálgica de ter sido transportado para o passado. 
