--- a/projeto-sabespe/src/app/pages/voce-sabia/voce-sabia.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia/voce-sabia.component.html
@@ -3,6 +3,7 @@
     <div class="overlap-group">
       <div class="voc">VOCÊ</div>
       <div class="sabia">SABIA?</div>
+      <div class="polo">Centro</div>
       <div class="paragrafo-com-scroll">
         <p class="a-atual-identidade">
           A OC foi berço do saneamento em São Paulo se iniciando com a criação em 1877 da “Companhia Cantareira de Água e Esgoto”, 
