--- a/projeto-sabespe/src/app/pages/voce-sabia-ibirapuera/voce-sabia-ibirapuera.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-ibirapuera/voce-sabia-ibirapuera.component.html
@@ -3,6 +3,7 @@
     <div class="overlap-group">
       <div class="voc">VOCÊ</div>
       <div class="sabia">SABIA?</div>
+      <div class="polo">Jardins</div>
       <div class="paragrafo-com-scroll">
         <p class="a-atual-identidade">
           Um reduto para o contato com a natureza, lazer e prática esportiva, localizado no coração da selva de pedras. 
