--- a/projeto-sabespe/src/app/pages/voce-sabia-museu/voce-sabia-museu.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-museu/voce-sabia-museu.component.html
@@ -3,6 +3,7 @@
     <div class="overlap-group">
       <div class="voc">VOCÊ</div>
       <div class="sabia">SABIA?</div>
+      <div class="polo">Ipiranga</div>
       <div class="paragrafo-com-scroll">
         <p class="a-atual-identidade">
           O Museu do Ipiranga é um alicerce para a preservação da memória histórica  brasileira. 
