--- a/projeto-sabespe/src/app/pages/capa-sp/capa-sp.component.html
+++ b/projeto-sabespe/src/app/pages/capa-sp/capa-sp.component.html
@@ -10,4 +10,5 @@
     <div class="paulo">PAULO</div>
     <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
     <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
+    <img class="frame-4" src="assets/linha-colorida.png" />
 </div>
