--- a/projeto-sabespe/src/app/pages/indicadores-contraturais/indicadores-contraturais.component.html
+++ b/projeto-sabespe/src/app/pages/indicadores-contraturais/indicadores-contraturais.component.html
@@ -10,6 +10,7 @@
     <img class="frame" src="assets/botao-sp.png" [routerLink]="['/capa-sp']" />
     <img class="frame-2" src="assets/botao-sa.png" [routerLink]="['/capa-sa']" />
     <img class="frame-3" src="assets/botao-m.png" [routerLink]="['/capa-maua']" />
+    <img class="frame-4" src="assets/linha-colorida.png" />
 </div>
 
     
