--- a/projeto-sabespe/src/app/pages/capa-maua/capa-maua.component.html
+++ b/projeto-sabespe/src/app/pages/capa-maua/capa-maua.component.html
@@ -5,8 +5,9 @@
     </div>
     <img class="ativo" src="assets/grafismo-capa.png" />
     <img class="vector" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/metas-maua']" />
-    <img class="img" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/metas-sa']" />
+    <img class="img" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/metas-sa-3']" />
     <div class="sao">MAUÁ</div>
     <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
     <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
+    <img class="frame-4" src="assets/linha-colorida.png" />
 </div>
