--- a/projeto-sabespe/src/app/pages/indicadores-contraturais/indicadores-contraturais.component.css
+++ b/projeto-sabespe/src/app/pages/indicadores-contraturais/indicadores-contraturais.component.css
@@ -53,7 +53,7 @@
   width: 150px;
   height: 150px;
   top: 920px;
-  left: 1600px;
+  left: 1050px;
   cursor: pointer;
 }
 
@@ -62,7 +62,7 @@
   width: 150px;
   height: 150px;
   top: 920px;
-  left: 1750px;
+  left: 1200px;
   cursor: pointer;
 }
 
@@ -71,7 +71,7 @@
   width: 150px;
   height: 150px;
   top: 920px;
-  left: 116px;
+  left: 750px;
   cursor: pointer;
 }
 
@@ -80,6 +80,7 @@
   width: 150px;
   height: 150px;
   top: 920px;
+  left: 600px;
   cursor: pointer;
 }
 
@@ -87,7 +88,7 @@
   width: 201px;
   left: 155px;
   position: absolute;
-  height: 59px;
+  height: 70px;
   top: 468px;
   cursor: pointer;
 }
@@ -96,7 +97,7 @@
   width: 212px;
   left: 384px;
   position: absolute;
-  height: 59px;
+  height: 70px;
   top: 468px;
   cursor: pointer;
 }
@@ -105,7 +106,15 @@
   width: 131px;
   left: 624px;
   position: absolute;
-  height: 59px;
+  height: 70px;
   top: 468px;
   cursor: pointer;
+}
+
+.frame-4 {
+  position: absolute;
+  width: 1920px;
+  height: 18px;
+  top: 1062px;
+  left: 0;
 }
