--- a/projeto-sabespe/src/app/pages/indicadores-processo/indicadores-processo.component.css
+++ b/projeto-sabespe/src/app/pages/indicadores-processo/indicadores-processo.component.css
@@ -53,7 +53,7 @@
   width: 150px;
   height: 150px;
   top: 920px;
-  left: 116px;
+  left: 1000px;
   cursor: pointer;
 }
 
@@ -62,6 +62,7 @@
   width: 150px;
   height: 150px;
   top: 920px;
+  left: 850px;
   cursor: pointer;
 }
 
@@ -69,7 +70,7 @@
   width: 201px;
   left: 155px;
   position: absolute;
-  height: 59px;
+  height: 70px;
   top: 468px;
   cursor: pointer;
 }
@@ -78,7 +79,7 @@
   width: 382px;
   left: 384px;
   position: absolute;
-  height: 59px;
+  height: 70px;
   top: 468px;
   cursor: pointer;
 }
@@ -89,4 +90,12 @@
   position: absolute;
   height: 59px;
   top: 468px;
+}
+
+.frame-4 {
+  position: absolute;
+  width: 1920px;
+  height: 18px;
+  top: 1062px;
+  left: 0;
 }
