--- a/projeto-sabespe/src/app/pages/indicadores-processo/indicadores-processo.component.html
+++ b/projeto-sabespe/src/app/pages/indicadores-processo/indicadores-processo.component.html
@@ -7,6 +7,7 @@
     <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
     <img class="frame" src="assets/ver-todos.png" [routerLink]="['/processo-igq']" />
     <img class="frame-2" src="assets/selecionar-indicador.png" [routerLink]="['/tela-botoes']" />
+    <img class="frame-4" src="assets/linha-colorida.png" />
 </div>
 
     
